reconstruct query project